--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
-<!DOCTYPE html> 
-<!-- ICS2O-Unit5-01-HTML -->
-<html lang="en-ca">
+<!DOCTYPE html>
+<!-- ICS2O-UNIT5-01-HTML -->
+  <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Unit-05" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="ICS2O-UNIT5-01-HTML" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="marco cuconato" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <meta name="theme-color" content="#FFFFFF" />
+    <title>Number generator</title>
+    <link rel="canonical" href="https://marco-cuconato.github.io/ICS2O-UNIT5-01-HTML/" />
+    <link rel="manifest" href="/ICS2O-UNIT5-01-HTML/site.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
-    />
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Random Number picker</title>
+    <!-- None blocking for Lighthouse report -->
+    <!-- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-indigo.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
-    <h1>Random Number picker</h1>    
-          <!-- Numeric Textfield with Floating Label -->
-    <form action="#">
-     <!-- Slider with Starting Value -->
-   <input class="mdl-slider mdl-js-slider" type="range"
-   min="0" max="100" value="25" tabindex="0"
-   onchange = "updateSliderValue(this.value)">
-      </div>
-    </form>
-    <!-- Accent-colored raised button -->
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" onclick="enterclicked()">
+    <h1>Random generator</h1>
+    <br>
+    <!-- Slider with Starting Value -->
+    <input id = "slider" class="mdl-slider mdl-js-slider" type="range"
+    min="1" max="6" value="1" tabindex="0"
+    onchange = "updateSliderValue(this.value)">
+    <div id="slider-value">
+    1
+    </div>  
+    <br>
+    <!-- Accent-colored raised button with ripple -->
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
       Enter
     </button>
-    <div id="celsius"></div>
+    <br>
+    <br>
+    <div id="answer"></div>
   </body>
 </html>
+
+
     
