--- a/index.html
+++ b/index.html
@@ -34,14 +34,12 @@
     </div>  
     <br>
     <!-- Accent-colored raised button with ripple -->
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
-      Enter
-    </button>
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"> onclick="buttonClicked()">
+  Button
+</button>
     <br>
     <br>
     <div id="answer"></div>
   </body>
 </html>
-
-
-    
+   
