--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>  
     <br>
     <!-- Accent-colored raised button with ripple -->
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"> onclick="buttonClicked()">
+<button class="mdl-button mdl-js-button mdl-button--raised  mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
   Button
 </button>
     <br>
